--- a/templates/user/dashboard/index.html.twig
+++ b/templates/user/dashboard/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello AproposController!{% endblock %}
+{% block title %}Hello UserDashboardController!{% endblock %}
 
 {% block body %}
 <style>
@@ -13,8 +13,8 @@
 
     This friendly message is coming from:
     <ul>
-        <li>Your controller at <code>C:/wamp64/www/servicePlaintes/src/Controller/AproposController.php</code></li>
-        <li>Your template at <code>C:/wamp64/www/servicePlaintes/templates/apropos/index.html.twig</code></li>
+        <li>Your controller at <code>C:/wamp64/www/servicePlaintes/src/Controller/UserDashboardController.php</code></li>
+        <li>Your template at <code>C:/wamp64/www/servicePlaintes/templates/user_dashboard/index.html.twig</code></li>
     </ul>
 </div>
 {% endblock %}
