--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,15 +8,18 @@
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
         <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
         <link rel="stylesheet" href="{{ asset('assets/styles/app.css') }}">
         <script src="{{ asset('assets/main.js') }}"></script>
 
         {% block stylesheets %}
+            {{ encore_entry_link_tags('app') }}
         {% endblock %}
 
         {% block javascripts %}
+            {{ encore_entry_script_tags('app') }}
             {% block importmap %}{{ importmap('app') }}{% endblock %}
         {% endblock %}
 
@@ -33,9 +36,9 @@
     <body class="{% block body_class %}{% endblock %}">
     <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
-      <a href="index.html" class="logo d-flex align-items-center">
+      <a href="#" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="assets/img/logo.png" alt=""> -->
+        <img src="{{ asset('images/logo.jpg') }}" alt="" href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
         <h1 class="sitename">REGIDESO</h1>
       </a>
       <nav id="navmenu" class="navmenu">
@@ -43,7 +46,7 @@
           <li><a href="{{ path('app_home') }}" class="active">Accueil</a></li>
           <li><a href="#about" class="">A propos</a></li>
           <li><a href="#services" class="">Services</a></li>
-          <li><a href="#notreequipe" class="">Notre équipe</a></li>
+          <li><a href="{{ path('app_team') }}" class="">Notre équipe</a></li>
           <li class="dropdown"><a href="#"><span>Plaintes</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li class="dropdown"><a href="#"><span>Gestion des Plaintes</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a> #}
@@ -105,7 +108,7 @@
             <span class="sitename">REGIDESO</span>
           </a>
           <div class="footer-contact pt-3">
-            <p>565, Avenue de la Justice</p>
+            <p>59-63, Boulevard du 30 juin</p>
             <p>Kinshasa/Gombe, R.D.C</p>
             <p class="mt-3"><strong>Phone:</strong> <span>+243 852 675 684</span></p>
             <p><strong>Email:</strong> <span>contact@regideso.com</span></p>
@@ -121,12 +124,12 @@
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Liens Rapides</h4>
           <ul>
-            <li><a href="{{ '(app_home)'}}"><i class="bi bi-chevron-right"></i> Accueil</a></li>
-            <li><a href="#"><i class="bi bi-chevron-right"></i> A propos</a></li>
-            <li><a href="#"><i class="bi bi-chevron-right"></i> Services</a></li>
-            <li><a href="#"><i class="bi bi-chevron-right"></i> Notre Equipe</a></li>
-            <li><a href="#"><i class="bi bi-chevron-right"></i> Plaintes</a></li>
-            <li><a href="#"><i class="bi bi-chevron-right"></i> Contact</a></li>
+            <li><a href="{{ path('app_home') }}"><i class="bi bi-chevron-right" class="nav-link px-4 text-white"></i> Accueil</a></li>
+            <li><a href="#"><i class="bi bi-chevron-right" class="nav-link px-4 text-white"></i> A propos</a></li>
+            <li><a href="{{ path('app_services') }}"><i class="bi bi-chevron-right" class="nav-link px-4 text-white"></i> Services</a></li>
+            <li><a href="{{ path('app_team') }}"><i class="bi bi-chevron-right" class="nav-link px-4 text-white"></i> Notre Equipe</a></li>
+            <li><a href="{{ path('app_deposer_plainte') }}"><i class="bi bi-chevron-right" class="nav-link px-4 text-white"></i> Plaintes</a></li>
+            <li><a href="{{ path('app_contact_ajax') }}"><i class="bi bi-chevron-right" class="nav-link px-4 text-white"></i> Contact</a></li>
           </ul>
         </div>
 
@@ -160,10 +163,6 @@
     <div class="container copyright text-center mt-4">
       <p>© <span>Copyright</span> <strong class="px-1 sitename">Regideso</strong> <span>Tous droits Réservés</span></p>
       <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you've purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
         Designed by <a href="https://regideso.com/">REGIDESO</a>
       </div>
     </div>
