--- a/templates/contact/contact.html.twig
+++ b/templates/contact/contact.html.twig
@@ -1,13 +1,47 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ContactController!{% endblock %}
+{% block title %}Contact!{% endblock %}
 
 {% block body %}
-<form id="ajax-form">
-  <input type="text" name="name" placeholder="Nom">
-  <input type="email" name="email" placeholder="Email">
-  <textarea name="message" placeholder="Message"></textarea>
-  <button type="submit">Envoyer</button>
-</form>
-<div id="form-response"></div>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+{{ encore_entry_script_tags('app') }}
+
+{#<div class="container py-5">
+  <h2 class="mb-4">Nous contacter</h2>
+
+  <form id="ajax-form" method="POST">
+    <div class="mb-3">
+      <label for="nom" class="form-label">Nom</label>
+      <input type="text" name="nom" id="nom" class="form-control" required>
+    </div>
+
+    <div class="mb-3">
+      <label for="email" class="form-label">Email</label>
+      <input type="email" name="email" id="email" class="form-control" required>
+    </div>
+
+    <div class="mb-3">
+      <label for="message" class="form-label">Message</label>
+      <textarea name="message" id="message" class="form-control" rows="5" required></textarea>
+    </div>
+
+    <button type="submit" class="btn btn-primary">Envoyer message</button>
+  </form>#}
+
+
+  {{ form_start(form, {'attr': {'id': 'ajax-form'}}) }}
+    <div class="mb-3">
+      {{ form_row(form.nom) }}
+    </div>
+    <div class="mb-3">
+      {{ form_row(form.email) }}
+    </div>
+    <div class="mb-3">
+      {{ form_row(form.message) }}
+    </div>
+    <button type="submit" class="btn btn-primary">Envoyer message</button>
+  {{ form_end(form) }}
+
+  <div id="form-response" class="mt-3"></div>
+</div>
 {% endblock %}
