--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -4,8 +4,12 @@
 
 {% block body %}
 <form method="post">
+  <div class="container-fluid vh-100" style="margin-top:100px">
     {% if error %}
-        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+        <div class="mx-auto mb-2 alert alert-danger justify-content-center col-md-8 col-sm-12 shadow-lg p-2" role="alert">
+            <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+        </div>
+        {# <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>#}
     {% endif %}
 
     {% if app.user %}
@@ -84,6 +88,6 @@
                 </div>
             </div>
         </div>
-    </div>#}
-</form>
+    </div>
+</form>#}
 {% endblock %}
