--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -4,12 +4,12 @@
 
 {% block body %}
 <form method="post">
-  <div class="container-fluid vh-100" style="margin-top:100px">
+  {# <div class="container-fluid vh-100" style="margin-top:100px"> #}
     {% if error %}
-        <div class="mx-auto mb-2 alert alert-danger justify-content-center col-md-8 col-sm-12 shadow-lg p-2" role="alert">
-            <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-        </div>
-        {# <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>#}
+        {# <div class="mx-auto mb-2 alert alert-danger justify-content-center col-md-8 col-sm-12 shadow-lg p-2" role="alert"> #}
+            {# <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div> #}
+        {# </div> #}
+        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
 
     {% if app.user %}
@@ -20,9 +20,9 @@
 
     <h1 class="h3 mb-3 font-weight-normal">Connexion</h1>
     <label for="inputEmail">Email</label>
-    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
+    <input type="email" value="{{ last_username }}" name="_email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
     <label for="inputPassword">Mot de Passe</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+    <input type="password" name="_password" id="inputPassword" class="form-control" autocomplete="current-password" required>
     <input type="hidden" name="_csrf_token" data-controller="csrf-protection" value="{{ csrf_token('authenticate') }}">
 
     <div class="checkbox mb-3">
