--- a/templates/user/deposer_plainte.html.twig
+++ b/templates/user/deposer_plainte.html.twig
@@ -35,9 +35,9 @@
         
         {# Champ typePlainte #}
           <div class="mb-3">
-                {{ form_label(form.typePlainte, null, {'label_attr': {'class': 'form-label'}}) }}
-                {{ form_widget(form.typePlainte, {'attr': {'class': 'form-control'}}) }}
-                {{ form_errors(form.typePlainte) }}
+                {{ form_label(form.type_plainte, null, {'label_attr': {'class': 'form-label'}}) }}
+                {{ form_widget(form.type_plainte, {'attr': {'class': 'form-control'}}) }}
+                {{ form_errors(form.type_plainte) }}
           </div>
 
         {# Champ Commune #}
